doc: add comments describing exposed functions and structs
