# api/subscription_controller.go
@@ -11,16 +11,13 @@ import (
 	"strv.com/newsletter/service"
 )
 
-type CreateSubscriptionInput struct {
-	Name        string `json:"subscriptionName"`
-	Description string `json:"description"`
-}
-
+// SubcriptionController is a struct that contains subscription services and user services.
 type SubcriptionController struct {
-	ss *service.SubscriptionService
-	us *service.UserService
+	ss *service.SubscriptionService // subscription service instance
+	us *service.UserService         // user service instance
 }
 
+// NewSubscriptionController is a constructor function that initializes a new SubscriptionController.
 func NewSubscriptionController(ss *service.SubscriptionService, us *service.UserService) *SubcriptionController {
 	return &SubcriptionController{
 		ss: ss,
@@ -28,11 +25,13 @@ func NewSubscriptionController(ss *service.SubscriptionService, us *service.User
 	}
 }
 
+// RegisterSubscriptionRouter is a method that sets up routes for subscription related requests.
 func (sc *SubcriptionController) RegisterSubscriptionRouter(masterRouter *gin.RouterGroup) {
-	subscriptionRouter := masterRouter.Group("/subscription")
+	subscriptionRouter := masterRouter.Group("/subscription") // create a new router group for subscription
 	{
-		subscriptionRouter.POST("/create", middleware.AuthMiddleware(sc.us, TimeoutPeriod), sc.Create)
-		subscriptionRouter.POST("/:subscriptionID/send", middleware.AuthMiddleware(sc.us, TimeoutPeriod), sc.Send)
+		// setup endpoints for create, send, subscribe and unsubscribe actions
+		subscriptionRouter.POST("/create", middleware.CreateAuthMiddleware(sc.us, timeoutPeriod), sc.Create)
+		subscriptionRouter.POST("/:subscriptionID/send", middleware.CreateAuthMiddleware(sc.us, timeoutPeriod), sc.Send)
 		subscriptionRouter.GET("/:subscriptionID/subscribe", sc.Subscribe)
 		subscriptionRouter.GET("/:subscriptionID/unsubscribe", sc.Unsubscribe)
 	}
@@ -45,31 +44,31 @@ func (sc *SubcriptionController) RegisterSubscriptionRouter(masterRouter *gin.Ro
 // @Security Bearer
 // @Accept  json
 // @Produce  json
-// @Param   input body CreateSubscriptionInput true "Subscription input"
-// @Success 200 {object} string "subscriptionId"
-// @Failure 500 {object} string "Error message"
+// @Param   input body model.CreateSubscriptionInput true "Subscription input"
+// @Success 200 {object} model.MessageResponse "Subscription ID"
+// @Failure 500 {object} model.MessageResponse "Error message"
 // @Router /subscription/create [post]
 func (sc *SubcriptionController) Create(c *gin.Context) {
-	ctx, cancel := context.WithTimeout(context.Background(), TimeoutPeriod)
+	ctx, cancel := context.WithTimeout(context.Background(), timeoutPeriod)
 	defer cancel()
 
-	var createSubscriptionInput CreateSubscriptionInput
+	var createSubscriptionInput model.CreateSubscriptionInput
 	c.BindJSON(&createSubscriptionInput)
 
 	currentUser, err := getCurrentUser(c)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, createMessageResponse("Error while authenticating user"))
+		c.AbortWithStatusJSON(http.StatusUnauthorized, model.NewMessageResponse("Error while authenticating user"))
 		return
 	}
 
 	subscriptionID, err := sc.ss.CreateSubscription(ctx, createSubscriptionInput.Name, currentUser.Email, createSubscriptionInput.Description)
 
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, createMessageResponse(fmt.Sprintf("Error while subscribing to the newsletter: %v", err)))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, model.NewMessageResponse(fmt.Sprintf("Error while subscribing to the newsletter: %v", err)))
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"subscriptionId": subscriptionID})
+	c.JSON(http.StatusOK, model.NewMessageResponse(fmt.Sprintf("Subscription created with id: %s", subscriptionID)))
 }
 
 // Send newsletter
@@ -81,11 +80,11 @@ func (sc *SubcriptionController) Create(c *gin.Context) {
 // @Produce  json
 // @Param subscriptionID path string true "Subscription ID"
 // @Param email body model.Email true "Email details"
-// @Success 200 {object} string "Message"
-// @Failure 500 {object} string "Error message"
+// @Success 200 {object} model.MessageResponse "Message"
+// @Failure 500 {object} model.MessageResponse "Error message"
 // @Router /subscription/{subscriptionID}/send [post]
 func (sc *SubcriptionController) Send(c *gin.Context) {
-	ctx, cancel := context.WithTimeout(context.Background(), TimeoutPeriod)
+	ctx, cancel := context.WithTimeout(context.Background(), timeoutPeriod)
 	defer cancel()
 
 	var email model.Email
@@ -93,17 +92,17 @@ func (sc *SubcriptionController) Send(c *gin.Context) {
 
 	subcriptionID, subscriptionIDPresent := c.Params.Get("subscriptionID")
 	if !subscriptionIDPresent {
-		c.AbortWithStatusJSON(http.StatusBadRequest, createMessageResponse(""))
+		c.AbortWithStatusJSON(http.StatusBadRequest, model.NewMessageResponse("Invalid request - subscriptionID has to be specified."))
 		return
 	}
 
 	err := sc.ss.SendNewsletterEmail(ctx, subcriptionID, &email)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, createMessageResponse(""))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, model.NewMessageResponse(fmt.Sprintf("Sending newsletter failed: %s", err.Error())))
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Newsletter sent successfully!"})
+	c.JSON(http.StatusOK, model.NewMessageResponse("Email successfully sent!"))
 }
 
 // Subscribe to a newsletter
@@ -113,26 +112,26 @@ func (sc *SubcriptionController) Send(c *gin.Context) {
 // @Produce  json
 // @Param subscriptionID path string true "Subscription ID"
 // @Param email query string true "Email to subscribe"
-// @Success 200 {object} MessageResponse "Message"
-// @Failure 500 {object} MessageResponse "Error message"
+// @Success 200 {object} model.MessageResponse "Message"
+// @Failure 500 {object} model.MessageResponse "Error message"
 // @Router /subscription/{subscriptionID}/subscribe [get]
 func (sc *SubcriptionController) Subscribe(c *gin.Context) {
-	ctx, cancel := context.WithTimeout(context.Background(), TimeoutPeriod)
+	ctx, cancel := context.WithTimeout(context.Background(), timeoutPeriod)
 	defer cancel()
 
 	email, emailPresent := c.GetQuery("email")
 	subscriptionID, subscriptionIDPresent := c.Params.Get("subscriptionID")
 	if !emailPresent || !subscriptionIDPresent {
-		c.JSON(http.StatusBadRequest, createMessageResponse(""))
+		c.JSON(http.StatusBadRequest, model.NewMessageResponse("Invalid request - email and subscription ID has to be specified."))
 		return
 	}
 
 	err := sc.ss.Subscribe(ctx, subscriptionID, email, "")
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, createMessageResponse(err.Error()))
+		c.JSON(http.StatusInternalServerError, model.NewMessageResponse(fmt.Sprintf("Subscription failed: %v", err.Error())))
 		return
 	}
-	c.JSON(http.StatusOK, createMessageResponse(""))
+	c.JSON(http.StatusOK, model.NewMessageResponse(fmt.Sprintf("%s successfully subscribed to %s", email, subscriptionID)))
 }
 
 // Unsubscribe from a newsletter
@@ -142,24 +141,24 @@ func (sc *SubcriptionController) Subscribe(c *gin.Context) {
 // @Produce  json
 // @Param subscriptionID path string true "Subscription ID"
 // @Param email query string true "Email to unsubscribe"
-// @Success 200 {object} MessageResponse "Message"
-// @Failure 500 {object} MessageResponse "Error message"
+// @Success 200 {object} model.MessageResponse "Message"
+// @Failure 500 {object} model.MessageResponse "Error message"
 // @Router /subscription/{subscriptionID}/unsubscribe [get]
 func (sc *SubcriptionController) Unsubscribe(c *gin.Context) {
-	ctx, cancel := context.WithTimeout(context.Background(), TimeoutPeriod)
+	ctx, cancel := context.WithTimeout(context.Background(), timeoutPeriod)
 	defer cancel()
 
 	email, emailPresent := c.GetQuery("email")
 	subscriptionID, subscriptionIDPresent := c.Params.Get("subscriptionID")
 	if !emailPresent || !subscriptionIDPresent {
-		c.JSON(http.StatusBadRequest, createMessageResponse(""))
+		c.JSON(http.StatusBadRequest, model.NewMessageResponse("Invalid request - email and subscription ID has to be specified."))
 		return
 	}
 
 	err := sc.ss.Unsubscribe(ctx, subscriptionID, email)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, createMessageResponse(err.Error()))
+		c.JSON(http.StatusInternalServerError, model.NewMessageResponse(fmt.Sprintf("Unsubscription failed: %v", err.Error())))
 		return
 	}
-	c.JSON(http.StatusOK, createMessageResponse(fmt.Sprintf("%s successfully unsubscribed from %s", email, subscriptionID)))
+	c.JSON(http.StatusOK, model.NewMessageResponse(fmt.Sprintf("%s successfully unsubscribed from %s", email, subscriptionID)))
 }
