# docs/swagger.json
@@ -34,26 +34,26 @@
                 "operationId": "create-subscription",
                 "parameters": [
                     {
-                        "description": "subscription input",
+                        "description": "Subscription input",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CreateSubscriptionInput"
+                            "$ref": "#/definitions/model.CreateSubscriptionInput"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "subscriptionId",
+                        "description": "Subscription ID",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -97,13 +97,13 @@
                     "200": {
                         "description": "Message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -137,13 +137,13 @@
                     "200": {
                         "description": "Message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -177,13 +177,13 @@
                     "200": {
                         "description": "Message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Error message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -207,7 +207,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.AuthenticationInput"
+                            "$ref": "#/definitions/model.AuthenticationInput"
                         }
                     }
                 ],
@@ -215,13 +215,13 @@
                     "200": {
                         "description": "Token",
                         "schema": {
-                            "$ref": "#/definitions/api.AuthenticationResponse"
+                            "$ref": "#/definitions/model.AuthenticationResponse"
                         }
                     },
                     "401": {
                         "description": "Message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -245,7 +245,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.AuthenticationInput"
+                            "$ref": "#/definitions/model.AuthenticationInput"
                         }
                     }
                 ],
@@ -253,13 +253,13 @@
                     "200": {
                         "description": "Token",
                         "schema": {
-                            "$ref": "#/definitions/api.AuthenticationResponse"
+                            "$ref": "#/definitions/model.AuthenticationResponse"
                         }
                     },
                     "401": {
                         "description": "Message",
                         "schema": {
-                            "$ref": "#/definitions/api.MessageResponse"
+                            "$ref": "#/definitions/model.MessageResponse"
                         }
                     }
                 }
@@ -267,7 +267,7 @@
         }
     },
     "definitions": {
-        "api.AuthenticationInput": {
+        "model.AuthenticationInput": {
             "type": "object",
             "properties": {
                 "email": {
@@ -278,7 +278,7 @@
                 }
             }
         },
-        "api.AuthenticationResponse": {
+        "model.AuthenticationResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -286,21 +286,13 @@
                 }
             }
         },
-        "api.CreateSubscriptionInput": {
+        "model.CreateSubscriptionInput": {
             "type": "object",
             "properties": {
                 "description": {
                     "type": "string"
                 },
                 "subscriptionName": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
@@ -312,6 +304,14 @@
                     "type": "string"
                 },
                 "subject": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
